<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item
            android:checked="true"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/refreshable_list"/>

        <item
            android:icon="@drawable/ic_border_bottom_black_24dp"
            android:title="@string/bottom_navigation"/>

        <item
            android:icon="@drawable/ic_apps_black_24dp"
            android:title="@string/app_launcher"/>

        <item
            android:icon="@drawable/ic_panorama_black_24dp"
            android:title="@string/cover_activity"/>

        <item
            android:icon="@drawable/ic_tab_black_24dp"
            android:title="@string/tabbed_activity"/>

        <item
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/directions"
            app:actionLayout="@layout/drawer_count_item"/>

        <item
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/notifications"
            app:actionLayout="@layout/drawer_count_item"/>

    </group>

    <group
        android:checkableBehavior="single">

        <item
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/log_out"/>

    </group>

</menu>