<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <Button
        android:id="@+id/skip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:text="@string/skip"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        style="?attr/borderlessButtonStyle"
        android:textColor="@color/colorPrimaryDark"/>

    <RelativeLayout
        android:id="@+id/indicator_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:elevation="4dp"
        android:layout_alignParentBottom="true">

        <com.viewpagerindicator.CirclePageIndicator
            android:id="@+id/indicator"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="8dp"
            android:layout_centerInParent="true"
            style="@style/CustomCirclePageIndicator"/>

        <Button
            android:id="@+id/prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:padding="8dp"
            android:layout_margin="8dp"
            android:layout_alignParentLeft="true"
            style="?attr/borderlessButtonStyle"
            android:textColor="@color/colorPrimaryDark"
            android:background="?attr/selectableItemBackground"/>

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:padding="8dp"
            android:layout_margin="8dp"
            android:layout_alignParentRight="true"
            style="?attr/borderlessButtonStyle"
            android:textColor="@color/colorPrimaryDark"
            android:background="?attr/selectableItemBackground"/>

    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/skip_button"
        android:layout_above="@+id/indicator_group"/>

</RelativeLayout>

